SONARTEXT-158 Enable Custom defined file path patterns by default (#240)